fixed heading and buttons too close to top

--- a/css/toDoStyles.css
+++ b/css/toDoStyles.css
@@ -6,6 +6,7 @@
 
 h1 {
     font-family: MouldyCheeseRegular, serif;
+    padding-top: 8%;
    
 }
 
